fix pointcloud memory usage, and fix inverted dist_mask for pointcloud, pointcloud is now correct

--- a/nerf/configs/config.yaml
+++ b/nerf/configs/config.yaml
@@ -23,13 +23,13 @@ scan:
   outer_bound: 2.5
 
 log:
-  root_dir: './nerf/logs/test3'
+  root_dir: './nerf/logs/test6'
   eval_image_freq: end
   eval_pointcloud_freq: end
-  save_weights_freq: end
+  save_weights_freq: null
 
 trainer:
-  num_epochs: 10
+  num_epochs: 100
   iters_per_epoch: 100
   n_rays: 16384
   dist_loss_range:
@@ -59,12 +59,12 @@ inference:
     image_num: 'middle'
 
   pointcloud:
-    max_variance: 0.05
+    max_variance: 0.02
     distribution_area: 0.5
 
-    side_margin: 3
+    side_margin: 10
     cams: [2, 3]
-    freq: 3
+    freq: 10
 
 renderer:
   steps:
