generate pointcloud script

--- a/nerf/configs/config.yaml
+++ b/nerf/configs/config.yaml
@@ -11,28 +11,30 @@ hydra:
 
 scan:
   scan_paths:
-    - /mnt/maara/plant_and_food/tonemapped/2022-08-31/jpeg_north/refined_5cm.json
+    - /home/casey/Uni/data/plant_and_food/tonemapped/2022-08-31/jpeg_north/refined_5cm.json
   scan_pose_paths:
     - null
   frame_ranges:
     - null
   frame_strides:
     - null
-  image_scale: 0.25
+  # image_scale: 0.0625
+  image_scale: 0.125
+  # image_scale: 0.25
   inner_bound: 2
   outer_bound: 2.5
 
 log:
-  root_dir: './nerf/logs/plant_and_food'
+  root_dir: './nerf/logs/plant_and_food/test2'
   eval_image_freq: end
-  eval_pointcloud_freq: end
-  save_weights_freq: null
+  eval_pointcloud_freq: null
+  save_weights_freq: end
 
 trainer:
-  num_epochs: 10
+  num_epochs: 100
   iters_per_epoch: 100
   n_rays: 16384
-  dist_loss_range: [1e-5, 1e-2]
+  dist_loss_range: [3e-5, 3e-2]
   depth_loss_range: [0, 0]
 
 optimizer:
@@ -55,11 +57,11 @@ inference:
     image_num: 'middle'
 
   pointcloud:
-    max_variance: 0.02
-    distribution_area: 0.5
+    max_variance: 0.01
+    distribution_area: 0.4
 
-    side_margin: 10
-    cams: [2, 3]
+    side_margin: 0
+    cams: [0]
     freq: 10
 
 renderer:
@@ -69,11 +71,11 @@ renderer:
     - 64
     - 32
   z_bounds:
-    - 0.01
-    - 0.1
-    - 1
-    - 10
-    - 100
+    - 0.5
+    - 2
+    - 20
+    - 200
+    - 2000
 
   importance_steps: 128
   alpha: 0.2
@@ -82,8 +84,8 @@ renderer_thresh:
   steps:
     - 256
   z_bounds:
-    - 0.1
-    - 1.0
+    - 0.5
+    - 2
   importance_steps: 128
   alpha: 0.2
 
